--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ ipython = "*"
 pytorch-lightning = {git = "https://github.com/williamFalcon/pytorch-lightning.git"}
 lineflow = "*"
 transformers = "2.6.0"
-pytorch-lightning = "*"
+pytorch-lightning = "1.4"
 torch = "1.5.0"
 
 [requires]
